Fix bookmarks too large on mobile

--- a/src/bookmarks.css
+++ b/src/bookmarks.css
@@ -86,11 +86,12 @@ a.bookmark:hover {
 }
 
 @media screen and ((max-width: 670px) or (max-height: 670px)) {
-	.bookmark {
+	a.bookmark {
 		font-size: 1rem;
 		height: 150px;
 		margin-top: -50px;
 		padding-top: 60px;
+		width: 75px;
 	}
 
 	@keyframes bookmark-slide-down {
